<resources>
    <string name="app_name">Financial Manager</string>
    <!-- Splash -->
    <string name="app_logo">App Logo</string>
    <string name="developed_by">Developed by:</string>
    <string name="g_b">G. B.</string>
    <!-- Login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be at least 1 digit</string>
    <string name="login_failed">Login failed. Check email and password and try again.</string>
    <string name="welcome">Welcome</string>
    <string name="email_already_registered">Email already registered</string>
    <!-- Bills -->
    <string name="undo_snack_bar_text">Bill deleted</string>
    <string name="undo_snack_bar_button_text">UNDO</string>
    <!-- -->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="test">Test</string>
    <!-- -->
    <string name="about_text">This application was developed in order to study the kotlin programming language for android.\nUsing the latest technologies, such as RecyclerView for listing, Room and Coroutines for access to the local database, and MVVM design pattern.\n\nThis application serves to manage expenses, recording each expense, thus keeping track of expenses.</string>
    <!-- -->
    <string name="themes">Themes</string>
    <string name="warning_themes">Themes</string>
    <string name="night_mode">Night Mode</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="gray">Gray</string>
    <string name="black">Black</string>
    <!-- -->
</resources>
